# tfc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dbus-tfc.conf
.cargo/: config
.github/: dependabot.yml
.github/workflows/: build.yml  rust-windows.yml  rust.yml
src/: banner.rs  button.rs  confman.rs  filter.rs  ipc.rs  ipc_ruler_client.rs  lib.rs  logger.rs  main.rs  median_filter.rs  old_main.rs  progbase.rs  time.rs
src/ipc/: dbus.rs  opcua.rs
tests/: ipc-test.rs  readme.md
tfc-exes/: Cargo.toml  README.md  flake.nix
tfc-exes/.cargo/: config
tfc-exes/ethercat/: Cargo.toml
tfc-exes/ethercat/src/: bus.rs  lib.rs  main.rs  opcua.rs
tfc-exes/ethercat/src/devices/: CiA402.rs  device.rs  device_trait.rs  mod.rs
tfc-exes/ethercat/src/devices/beckhoff/: ek1xxx.rs  el1xxx.rs  el2xxx.rs  el3356.rs  mod.rs
tfc-exes/ethercat/src/devices/lenze/: i550.rs  mod.rs
tfc-exes/ipc-ruler/: Cargo.toml
tfc-exes/ipc-ruler/src/: lib.rs  main.rs
tfc-exes/operations/: Cargo.toml
tfc-exes/operations/src/: main.rs
tfc-exes/operations/src/operations/: client.rs  common.rs  dbus_service.rs  mod.rs  server.rs
tfc-exes/signal_source/: Cargo.toml
