[package]
name = "framework-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
log = "0.4"
lazy_static = "1.5.0"
env_logger = "0.11"
systemd-journal-logger = "2.1.1"
schemars = "0.8.21"
serde = { version = "1.0.206", features = ["derive"] }
zbus = "4.4.0"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
zeromq = "0.4.0"
quantities = { version = "0.13.2", features = ["frequency", "length", "mass", "temperature"] }

[dev-dependencies]
rand = "0.8.5"
