[package]
name = "tfc"
version = "2024.9.1"
authors = ["Centroid <centroid@centroid.is>"]
edition = "2021"
build = "build.rs"
description = "The TFC is a distributed, real-time, event-driven framework for building scalable and resilient systems."
readme = "README.md"
repository = "https://github.com/centroid-is/tfc"
homepage = "https://centroid.is"
documentation = "https://tfc.centroid.is"
keywords = ["framework", "distributed", "real-time", "event-driven", "scalable", "resilient"]
categories = ["Development", "System", "Framework"]
license = "MIT"

[build-dependencies]
chrono = "0.4"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
log = "0.4"
lazy_static = "1.5.0"
env_logger = "0.11"
schemars = "0.8.21"
serde = { version = "1.0.206", features = ["derive"] }
zbus = "5.3.0"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros", "tracing"] }
console-subscriber = "0.4.0"

zeromq = { git = "https://github.com/zeromq/zmq.rs.git", commit="1334d257ee4ddb73c379bfa667a8e0cfa8cc55d9", default-features = false, features = [
    "tokio-runtime",
    "ipc-transport",
] }
quantities = { version = "0.13.2", features = [
    "frequency",
    "length",
    "mass",
    "temperature",
] }
futures-channel = "0.3.30"
futures = "0.3.30"
async-trait = "0.1.82"
parking_lot = { version = "0.12.3", features = ["send_guard", "serde"] }
tokio-util = "0.7.12"
opcua = { git = "https://github.com/centroid-is/opcua.git", branch = "stable-master", commit = "7742e0d379a5f027fe3cb385bc030b0a622e3c47" }

[dev-dependencies]
rand = "0.8.5"


[features]
s3x-legacy-naming = []

[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = "2.1.1"