[package]
name = "tfc-ipc-ruler"
version = "2024.12.0"
authors = ["Centroid <centroid@centroid.is>"]
edition = "2021"
description = "TFC IPC Ruler"
readme = "README.md"
repository = "https://github.com/centroid-is/tfc-exes"
homepage = "https://centroid.is"
keywords = ["tfc", "centroid", "framework", "ipc", "ruler"]
categories = ["Development", "System", "Framework"]
license = "MIT"

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
tfc = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
smlang = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde_json = "1.0.133"

[[bin]]
name = "ipc-ruler"
path = "src/main.rs"
